# ratctl

./: Cargo.toml  Makefile  README.md
src/: config.rs  corsair.rs  device.rs  devices.rs  evdev.rs  main.rs  protocol.rs  razer.rs  types.rs
src/protocols/: asus.rs  corsair.rs  mod.rs  razer.rs
src/tui/: input.rs  mod.rs  views.rs
tools/: probe-razer.py
udev/: 99-ratctl.rules
