[package]
name = "ratctl"
description = "Configure gaming mice on Linux — buttons, DPI, LEDs, profiles"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Rickard Dybeck"]
repository = "https://github.com/alde/ratctl"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
evdev = "0.13.2"
nix = { version = "0.31.2", features = ["ioctl", "fs", "poll"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
